2007-02-14  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (stringToVersion):  Be more lenient in what
	strings we accept to take into account RHEL variants.

2007-02-08  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser._reset):  Add a method to
	reset the state machine state and call it from __init__.  Also call it
	from readKickstart and readKickstartFromString except in the special
	case of included files.  This allows calling the parser multiple times
	with the same data objects for file inheritance/overriding.

2007-02-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-06  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/f7.py (F7Handler.Key.__str__):  Add a newline.
	* pykickstart/commands/rhel5.py (RHEL5Handler.Key.__str__):  Likewise.

	* pykickstart/constants.py:  Add network bootproto constants (#197694).
	* pykickstart/commands/fc3.py:  Use new network constants.
	* pykickstart/commands/fc4.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.
	* pykickstart/commands/rhel4.py:  Likewise.

2007-02-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Fix tracebacks in subclass __str__
	methods (#226734).
	* pykickstart/commands/rhel4.py:  Likewise.

2007-01-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Modified to more closely match the extras
	packaging guidelines.

2007-01-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-01-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc3.py:  Added.
	* pykickstart/commands/fc4.py:  Move basic commands and data back to
	FC3.

	* pykickstart/commands/rhel4.py:  Added.

	* pykickstart/version.py:  Add support for FC3 and RHEL4.

	* pykickstart/commands/fc4.py (FC4Handler.__init__):  Use
	overrideCommand instead of registerCommand.
	* pykickstart/commands/fc5.py (FC5Handler.__init__):  Likewise.